modules/crates/domain/tests/edge_type_safety/compile_fail/allocated_to_rejects_memory_as_principal.stderr
error[E0277]: the trait bound `MemoryId: Principal` is not satisfied
  --> tests/edge_type_safety/compile_fail/allocated_to_rejects_memory_as_principal.rs:10:43
   |
10 |     let _ = Edge::new_allocated_to(&from, &to);
   |             ----------------------        ^^^ the trait `Principal` is not implemented for `MemoryId`
   |             |
   |             required by a bound introduced by this call
   |
help: the following other types implement trait `Principal`
  --> src/model/principal_resource.rs
   |
   | impl Principal for AgentId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ `AgentId`
...
   | impl Principal for UserId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ `UserId`
...
   | impl Principal for OrgId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^ `OrgId`
...
   | impl Principal for ProjectId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ProjectId`
note: required by a bound in `Edge::new_allocated_to`
  --> src/model/edges.rs
   |
   |     pub fn new_allocated_to<P1: Principal, P2: Principal>(from: &P1, to: &P2) -> Edge {
   |                                                ^^^^^^^^^ required by this bound in `Edge::new_allocated_to`
